Fixed UI not showing properly

--- a/src/components/footer/style.module.scss
+++ b/src/components/footer/style.module.scss
@@ -5,4 +5,8 @@
   justify-content: center;
   align-items: center;
   flex-direction: row;
+
+  .text {
+    color: #262626
+  }
 }
