--- a/src/components/postgame-stat/style.module.scss
+++ b/src/components/postgame-stat/style.module.scss
@@ -11,4 +11,8 @@
   // .perkey-stats-container {
   // 	background-color: blue;
   // }
+
+  .stat-text {
+    color: #F2F2F2;
+  }
 }
